force-app/main/default/objects/ProductPricing__c/ProductPricing__c.object-meta.xml
<CustomObject>
    <label>Product Pricing</label>
    <nameField>
        <label>Product Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>