force-app/main/default/objects/ProductPricing__c/fields/ATMFee__c.field-meta.xml
<CustomField>
    <fullName>ATMFee__c</fullName>
    <label>ATM Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>