force-app/main/default/objects/ProductPricing__c/fields/CalendarMonth__c.field-meta.xml
<CustomField>
    <fullName>CalendarMonth__c</fullName>
    <label>Calendar Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>