force-app/main/default/objects/ProductPricing__c/fields/CardReplacement__c.field-meta.xml
<CustomField>
    <fullName>CardReplacement__c</fullName>
    <label>Card Replacement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>