force-app/main/default/objects/ProductPricing__c/fields/Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Currency_Symbol__c</fullName>
    <formula>CASE(  Home_Country__c , &quot;DE&quot;,&quot;€&quot;,&quot;FR&quot;,&quot;€&quot;,&quot;ES&quot;,&quot;€&quot;,&quot;IT&quot;,&quot;€&quot;, &quot;UK&quot;,&quot;£&quot;, &quot;$&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Symbol</label>
    <type>Text</type>
</CustomField>