force-app/main/default/objects/ProductPricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>Home_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>